Fix #118: CHORE: Update to Java 21 language features.